apps/base/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  type: ClusterIP
  selector:
    app: filebrowser
  ports:
    - port: 8088
      targetPort: 80
      protocol: TCP
